# SearchSuggestionSystem

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  trie_data.bin.analytics
.github/workflows/: ci.yml
build-debug/: CMakeCache.txt  Makefile  SearchSuggestionTests  cmake_install.cmake
include/: AppCore.h  GuiApp.h  LRUCache.h  SearchTypes.h  Trie.h  TrieNode.h
src/: AppCore.cpp  GuiApp.cpp  LRUCache.cpp  Trie.cpp  main.cpp  tests.cpp
